salesforce-classic-Feature-IN-955/src/objects/Service__c.object
<CustomObject>
    <description>The Service object associated with Billing Account.</description>
    <label>Service</label>
    <nameField>
        <label>Service</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <description>The Account with which this service is associated.</description>
        <label>Gotransverse Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount_WC__c</fullName>
        <description>New Amount Object to support multi currency. Get Currency from Account.</description>
        <label>Gotransverse Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The Service amount.</description>
        <label>Gotransverse Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>canAddNewServiceResource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gotransverse canAddNewServiceResource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkDeactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gotransverse CheckDeactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckRuleOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gotransverse CheckRuleOverride</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommitedThru__c</fullName>
        <label>Gotransverse Commited Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParentService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Service of Current Service.</description>
        <label>Gotransverse Parent Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>ParentService</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Service_Eid__c</fullName>
        <label>Gotransverse Parent Service Eid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductEid__c</fullName>
        <label>Gotransverse ProductEid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductRuleType__c</fullName>
        <label>Gotransverse Product Rule Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Gotransverse Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RenewAction__c</fullName>
        <label>Gotransverse Renew Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serialized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gotransverse Serialized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceEid__c</fullName>
        <label>Gotransverse ServiceEid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceProductCode__c</fullName>
        <label>Gotransverse Service Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceProductName__c</fullName>
        <label>Gotransverse Service Product Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ServiceResourceNumber__c</fullName>
        <label>Gotransverse Service Resource Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Agreement__c</fullName>
        <label>Gotransverse Service Agreement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This is replacement for existing Amount field. Earlier Amount field of Currency Type, but as we are going to support multiple currency so converting Amount to Number Type field. The currency will be stored with Account object.</description>
        <label>Gotransverse Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShortDescription__c</fullName>
        <label>ShortDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StatusDate__c</fullName>
        <description>Status Date of service is Service Start Date if service&apos;s status is other than DEACTIVATED. If service status is deactivated then status that is service end date.</description>
        <label>Gotransverse Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the service associated with Billing Account.</description>
        <label>Gotransverse Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuspendService__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gotransverse SuspendService</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>